--- a/frontend/source/pug/layout/navigation.pug
+++ b/frontend/source/pug/layout/navigation.pug
@@ -4,24 +4,16 @@
 nav.navigation
     form( action="list.html" ).container
         .row
-            .col-md-4.around-xs.center-xs
+            .col-sm-3.start-sm.center-xs.col-sm-offset-1
                 a.nav__topics( href="#topics" data-select-overlay="topics" ) Topics
                 a.nav__collections( href="#collections" data-select-overlay="collections" ) Collections
-            .col-md-4.middle-xs.center-xs
+            .col-sm-5.middle-xs.center-xs
                 .nav__search
                     label.nav__search-label( for="search" hidden ) Search
                     input.nav__search-input( id="search" type="text" placeholder="Search the archive" )
                     button.nav__search-button Go
-            .col-md-4.end-md.middle-xs.center-xs
+            .col-sm-2.middle-xs.center-xs.end-sm
                 if showFilter
-                    label.select-label( for="filter" ) Filter
-                    select( id="filter" name="filter" data-select-filter="" )
-                        option( value="list.html" selected=(selected === 'all') ) All
-                        option( value="article.html" selected=(selected === 'articles') ) Articles
-                        option( value="videos.html" selected=(selected === 'videos') ) Videos
-                        option( value="pictures" ) Pictures
-                        option( value="files" ) Files
-                        //option( value="collections" ) Collections
-                        option( value="events" ) Events
-                        option( value="campaigns" ) Campaigns
-                        option( value="person.html"  selected=(selected === 'people')  ) People
+                    a.nav__filter( href="#filter" data-select-overlay="filter" ) Filter
+                    span.nav__filter-selected 
+                        a( href="#filter" data-select-overlay="filter" ) #{selected}
