filter content via overlay

--- a/frontend/source/less/layout/navigation.less
+++ b/frontend/source/less/layout/navigation.less
@@ -64,6 +64,13 @@
         left: 0;
         width: 24rem;
 
+        @media @screen-md-max {
+            width: 18rem;
+        }
+        @media @screen-sm-max {
+            width: 24rem;
+        }
+
         -webkit-appearance: none;
         -webkit-border-radius: 0rem;
     }
