--- a/frontend/source/pug/layout/navigation.pug
+++ b/frontend/source/pug/layout/navigation.pug
@@ -3,11 +3,12 @@
 
 nav.navigation
     form( action="list.html" ).container
+        input( type="hidden" name="type" data-select-results-type-target="" )
         .row
             .col-sm-3.start-sm.center-xs.col-sm-offset-1
                 a.nav__topics( href="#topics" data-select-overlay="topics" ) Topics
                 a.nav__collections( href="#collections" data-select-overlay="collections" ) Collections
-            .col-sm-5.middle-xs.center-xs
+            .col-sm-4.middle-xs.center-xs
                 .nav__search
                     label.nav__search-label( for="search" hidden ) Search
                     input.nav__search-input( id="search" type="text" placeholder="Search the archive" )
@@ -16,4 +17,4 @@ nav.navigation
                 if showFilter
                     a.nav__filter( href="#filter" data-select-overlay="filter" ) Filter
                     span.nav__filter-selected 
-                        a( href="#filter" data-select-overlay="filter" ) #{selected}
+                        a( href="#filter" data-select-overlay="filter" data-select-results-filter-target="" ) #{selected}
