submit form on topic selection

--- a/frontend/source/pug/layout/navigation.pug
+++ b/frontend/source/pug/layout/navigation.pug
@@ -2,7 +2,7 @@
 - selected = selected ? selected : 'all';
 
 nav.navigation
-    form( action="list.html" ).container
+    form( action="list.html" id="form" ).container
         input( type="hidden" name="type" data-select-results-type-target="" )
         .row
             .col-sm-3.start-sm.center-xs.col-sm-offset-1
