--- a/frontend/source/less/modules/content.less
+++ b/frontend/source/less/modules/content.less
@@ -1,5 +1,16 @@
 .content {
     
+    &.picture {
+        .content-type { margin-top: 2.6rem; }
+        img {
+            width: 100%;
+        }
+
+        .content-intro {
+            margin-left: 4rem;
+        }
+    }
+
     .content-title {
         .font(title-normal);
         color: @color-grey--50;
