--- a/frontend/source/pug/list.pug
+++ b/frontend/source/pug/list.pug
@@ -76,7 +76,7 @@ append main
                     .listitem-video-still
                         a( href="video.html" )
                             img( src='styles/images/lol-cat.png' )
-                        a.read-more.__play( href="video.html" ) View
+                        a.read-more( href="video.html" ) View
                     
                     +tags({
                             tag: 'Mess',
