--- a/frontend/source/less/styles.less
+++ b/frontend/source/less/styles.less
@@ -37,5 +37,7 @@
 @import "modules/content";
 @import "modules/content-info";
 @import "modules/content-related";
+@import "modules/list";
 @import "modules/listitem";
+@import "modules/tile";
 @import "modules/video";
