details navigation, tile video

--- a/frontend/source/less/modules/tile.less
+++ b/frontend/source/less/modules/tile.less
@@ -45,7 +45,7 @@
                 .font(title-extra-small);
             }
         }
-        
+
         &:hover {
             .tile-title {
                color: @color-primary;
@@ -54,7 +54,8 @@
     }
 
     &.__picture,
-    &.__person {
+    &.__person,
+    &.__video {
         .tile-title {
             color: white;
         }
