--- a/frontend/source/less/layout/navigation.less
+++ b/frontend/source/less/layout/navigation.less
@@ -20,6 +20,10 @@
     width: 100%;
     line-height: 5rem;
 
+    .row > div {
+        min-height: 1rem;
+    }
+    
     a, label {
         .font(extra-small);
         letter-spacing: 0.2rem;
@@ -28,14 +32,16 @@
         color: @color-grey--40;
     }
     .nav__topics {
+        @media @screen-sm-max { margin-top: 1rem; }
         margin-right: 1rem;
     }
     .nav__collections {
+        @media @screen-sm-max { margin-top: 1rem; }
         margin-left: 1rem;
     }
     .nav__search {
         position: relative;
-        height: 2.8rem;
+        height: 5rem;
         width: 28.2rem;
         overflow: hidden;
     }
@@ -44,7 +50,7 @@
 
     input, button {
         position: absolute;
-        top: 0;
+        top: .9rem;
         height: 3rem;
         border: none;
 
