--- a/frontend/source/pug/modules/tile.pug
+++ b/frontend/source/pug/modules/tile.pug
@@ -1,14 +1,23 @@
 mixin tile(tile)
+    
     if (tile.type == 'picture')
         article.tile.__picture
             .tile-content-type #{tile.type}
             a.tile-inner( href="#" style="background-image: url('" + tile.image + "')" )
                 .tile-title #{tile.title}
+
+    else if (tile.type == 'video')
+        article.tile.__video
+            .tile-content-type #{tile.type}
+            a.tile-inner( href="#" style="background-image: url('" + tile.image + "')" )
+                .tile-title #{tile.title}
+    
     else if (tile.type == 'person')
         article.tile.__person
             .tile-content-type #{tile.type}
             a.tile-inner( href="#" style="background-image: url('" + tile.image + "')" )
                 .tile-title #{tile.title}
+    
     else
         article.tile
             .tile-content-type #{tile.type}
