diff links, h2 for title

--- a/frontend/source/less/modules/tile.less
+++ b/frontend/source/less/modules/tile.less
@@ -29,6 +29,7 @@
         
         .tile-title {
             .font(title-small);
+            font-weight: normal;
             color: @color-grey--90;
             text-align: center;
             
